Primjeri/1-primjer-pod-01.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: webserver
      image: nginx:latest
      ports:
        - containerPort: 80
