Primjeri/1-primjer-pod-02.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: webserver
      image: nginx:latest
      ports:
        - containerPort: 80
    - name: webwatcher
      image: afakharany/watcher:latest
