Primjeri/4-primjer-deployment-01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: webserver
    tier: webserver
spec:
  selector:
    matchLabels:
      app: webserver
      tier: webserver
  replicas: 2
  template:
    metadata:
      labels:
        app: webserver
        tier: webserver
    spec:
      containers:
        - name: webserver
          image: nginx:latest
          ports:
            - containerPort: 80
