Primjeri/5-primjer-deployment-01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  selector:
    matchLabels:
      run: webserver
  replicas: 2
  template:
    metadata:
      labels:
        run: webserver
    spec:
      containers:
        - name: webserver
          image: nginx:latest
          ports:
            - containerPort: 80
