Primjeri/5-primjer-service-01.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    run: webserver
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    run: webserver
